--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 <p>Have a project in mind or just want to say hello? Let’s connect!</p>
                 
                 <p style="margin-top: 1rem;">
-                    <strong>Email:</strong><a href="mailto:youremail@example.com?subject=Portfolio%20Inquiry&body=Hello,%20I%20visited%20your%20portfolio%20and...">kabeer.aptech.1@gmail.com</a><br>
+                    <strong>Email:</strong><a href="mailto:kabeer.aptech.1@gmail.com?subject=Portfolio%20Inquiry&body=Hello,%20I%20visited%20your%20portfolio%20and...">kabeer.aptech.1@gmail.com</a><br>
                     <strong>Phone:</strong> <span style="color:#00E8F8;">+92 324-3267318</span><br>
                     <strong>Location:</strong> <span style="color:#00E8F8;">Karachi, Pakistan</span>
                 </p>
@@ -96,3 +96,4 @@
 
 
 </html>
+
